# Amira

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  3_perfect.filtered.sam.json  5.filtered.sam.json  AMR_calls.json  CHANGELOG.md  Makefile  README.md  Singularity.def  __main__.py  environment.yaml  interesting_genes.txt  pyproject.toml  requirements.txt
amira/: __main__.py  cluster_reads.py  construct_graph.py  graph_operations.py  graph_utils.py  path_finding_operations.py  path_finding_utils.py  pre_process.py  pre_process_operations.py  pre_processing.py  read_operations.py  read_utils.py  result_operations.py  result_utils.py
amira_prototype/: __main__.py  build_graph.py  build_graph_old.py  build_graph_zam_version.py  construct_edge.py  construct_gene.py  construct_gene_mer.py  construct_graph.py  construct_node.py  construct_read.py  construct_unitig _old.py  construct_unitig.py  def_options.py  gene.py  gene_mer.py  pre_process.py  preprocess.py  process_json_data.py  test_functions.py  visualise_graph.py
test/: test_construct_edge.py  test_construct_gene.py  test_construct_gene_mer.py  test_construct_graph.py  test_construct_node.py  test_construct_read.py  test_gene.py  test_gene_mer.py
tests/: complex_gene_calls_eight.json  complex_gene_calls_five.json  complex_gene_calls_four.json  complex_gene_calls_nine.json  complex_gene_calls_one.json  complex_gene_calls_seven.json  complex_gene_calls_six.json  complex_gene_calls_three.json  complex_gene_positions_eight.json  complex_gene_positions_five.json  complex_gene_positions_four.json  test.3.1.1.gml  (+16 more)
(+18 files in other folders)
